# souffle

./: CMakeLists.txt  choco-packages.config  vcpkg.json
.github/images/: entrypoint.sh
.github/workflows/: CI-Tests.yml  VS-CI-Tests.yml  create-packages.yml
cmake/: SouffleTests.cmake  redirect.py
sh/setup/: install_macos_arm_deps.sh
src/: AggregateOp.h  CMakeLists.txt  FunctorOps.cpp  Global.cpp  MainDriver.cpp  MainDriver.h  RelationTag.h  Session.cpp  Session.h  main.cpp  souffle-compile.template.py  souffle.cpp
src/ast/: Aggregator.cpp  Aggregator.h  BranchType.cpp  BranchType.h  Clause.cpp  Clause.h  Directive.cpp  ExecutionPlan.cpp  ExecutionPlan.h  FunctorAlias.cpp  FunctorAlias.h  FunctorDeclaration.cpp  FunctorDeclaration.h  IntrinsicAggregator.cpp  IntrinsicAggregator.h  Items.h  ModuleDecl.cpp  ModuleDecl.h  Node.h  OrderByElement.cpp  OrderByElement.h  Program.cpp  Program.h  QualifiedName.cpp  QualifiedName.h  Relation.cpp  UserDefinedAggregator.cpp  UserDefinedAggregator.h
src/interpreter/: BTreeDeleteIndex.cpp  BTreeIndex.cpp  Engine.cpp  Engine.h  EqrelIndex.cpp  Generator.cpp  Generator.h  Node.h  ProgInterface.h  ProvenanceIndex.cpp  Relation.h
src/parser/: ParserDriver.cpp  ParserDriver.h  VirtualFileSystem.h  parser.yy  scanner.ll
src/ram/: AbstractAggregate.h  Aggregate.h  IndexAggregate.h  IntrinsicAggregator.h  NestedUserDefinedOperator.h  ParallelAggregate.h  ParallelIndexAggregate.h  Program.h  Relation.h
tests/interface/multiresult_functors/: CMakeLists.txt  multiresult_functors.cpp  multiresult_functors.dl  query1.csv  query2.csv  query3.csv  query4.csv  query5.csv
(+190 files in other folders)
